# DocsPI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  change-icon.js  index.html  package.json  version-bump.js
.github/workflows/: build.yml
docspi-divert/: backend.go  backend_android.go  backend_ios.go  backend_linux.go  backend_macos.go  backend_windows.go  dns.go  engine.go  fake_hello.go  go.mod  packet_util.go  windivert.go
scripts/: build-divert.ps1  build-proxy.cjs  build-proxy.js  build-proxy.ps1  copy-proxy.js  copy-proxy.ps1  fix-icon.cjs  init-android.sh  mobile-setup.ps1  release.ps1
src/: App.css  App.jsx  Settings.jsx  constants.js  i18n.js  profiles.js  utils.js
src-tauri/: Cargo.toml  build.rs  hooks.nsi  installer.nsi  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/android/: DocsPIApp.kt  DocsPiVpnService.kt
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/: lib.rs  main.rs  mobile.rs
src-tauri/src/platform/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/__tests__/: constants.test.js  i18n.test.js  update.test.js
src/components/: BypassTest.jsx  ErrorBoundary.jsx  GameModePanel.jsx  LatencyGraph.jsx  LogViewer.jsx  SpeedTestMeter.jsx  TrafficCounter.jsx  UpdateNotification.jsx  UpdatePanel.jsx  WelcomeScreen.jsx
src/context/: AuthContext.jsx  ThemeContext.jsx  UpdateContext.jsx
src/hooks/: useAndroidVpn.js  useConfig.js  useConnection.js  useEngine.js  useMediaQuery.js  useProxy.js  useSessionHistory.js  useUpdateChecker.js
src/lib/: update.js
(+7 files in other folders)
